# rusty-docs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
frontend/: .gitignore  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.js  page.js
frontend/src/components/: Chat.jsx  ControlPanel.jsx  Header.jsx  Logs.jsx  UserMsg.jsx
src/: consts.rs  doc_gen.rs  lib.rs  models.rs  openai.rs  parsing.rs  qdrant.rs  utils.rs
