[package]
name = "rusty-docs"
version = "0.1.0"
edition = "2021"
authors = ["Egidio De Salve <egidio.desalve.code@gmail.com>"]
description = "Rust repositories knowledge manager"
readme = "README.md"

[lib]
name = "rusty_docs"
path = "src/lib.rs"

[[bin]]
name = "rusty-docs-app"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"]}
qdrant-client = "1.6"
regex = "1"
reqwest = { version = "0.11", features = ["json"]}
rocket = { version = "0.5", features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
tiktoken-rs = "0.5"
tokio = { version = "1", features = ["full"] }
